--- a/global.css
+++ b/global.css
@@ -65,11 +65,14 @@ body{
 /* Interest page  */
 h3{
     font-family:Serif;
-    font-size: 4em;
+    font-size: 3em;
     font-weight: 300;
 }
 #page2{
     padding-left: 20px;
+    font-family:Serif;
+    font-size: 4em;
+    font-weight: 300;
 }
 .interest1{
     margin: 30px;
